# txt2speech

./: .env.example  .gitignore  AGENTS.md  AUTO_DEV_OPENCODE.md  README.md
.adf/manifests/: claude.json  codex.json  opencode.json
.claude/agents/: analyst.md  architect.md  code-reviewer.md  designer.md  developer.md  plan-reviewer.md  task-planner.md
.claude/commands/: adf.analyze.md  adf.archive-design.md  adf.archive-memory.md  adf.breakdown.md  adf.code-review.md  adf.design.md  adf.develop.md  adf.help.md  adf.load-memory.md  adf.planner.md  adf.update-memory.md  adf.validate-plan.md  adf.whoami.md
.codex/agents/: analyst.toml  architect.toml  code-reviewer.toml  designer.toml  developer.toml  plan-reviewer.toml  task-planner.toml
.opencode/agents/: analyst.md  architect.md  code-reviewer.md  designer.md  developer.md  plan-reviewer.md  task-planner.md
.opencode/commands/: adf.archive-design.md  adf.archive-memory.md  adf.breakdown.md  adf.code-review.md  adf.develop.md  adf.update-memory.md  adf.whoami.md
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: audio.py  history.py  synthesize.py  voices.py
backend/app/audio/: pcm.py
backend/app/ingest/: markdown.py
backend/app/storage/: db.py  files.py
backend/app/tts/: chunker.py  client.py  prompt.py
backend/tests/: test_audio_api.py  test_chunker.py  test_client.py  test_config.py  test_history.py  test_markdown.py  test_pcm.py  test_prompt.py  test_storage_db.py  test_storage_files.py  test_synthesize.py  test_voices.py
frontend/: package-lock.json  package.json
(+32 files in other folders)
